Index page button fix #1
Slightly changed design, so it wouldn't look like WIN95 KNOPKA)

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,5 +1,5 @@
 .sharp {
-  border-radius:0;
+  border-radius:1;
   color: #ffffff;
   align-items: flex-start;
   text-align: center;
@@ -7,9 +7,8 @@
   color: #f2f2f2;
   background-color: #66000000;
   box-sizing: border-box;
-  padding: 2px 6px 3px;
-  border-width: 1.25px;
-  border-style: outset;
+  padding: 2px 16px 3px;
+  border-width: 2.25px;
   border-color: #fffdf4;
   border-image: initial;
 }
